# -4B-OpenClaw-6-

./: ArmPi Pro API接口说明.md  README.md  vercel.json
api/: config.js  joints.js  urdf.js
api/meshes/: [filename].js
config/: activate_env.bat  mcp_config.json  mcp_config_ui.html  requirements.txt
docs/: MCP_CLIENT_GUIDE.md  MCP_HTTP_GUIDE.md  MCP_SETUP_GUIDE.md  README_MCP_HTTP.md  VOICE_COMMAND_MCP_GUIDE.md
hiwonder-toolbox/: button_scan.py  find_device.py  wifi.py
mcp/: README.md  mcp_client.py  mcp_client_sync.py  mcp_server.py  mcp_server_http.py  mcp_server_web.py
openclaw_controller/: README.md
public/js/: main.js
ros_ws/src/armpi_fpv_descrption/: CMakeLists.txt  package.xml
ros_ws/src/armpi_pro_common/: setup.py
ros_ws/src/armpi_remote_control/: CMakeLists.txt  README.md  package.xml
ros_ws/src/armpi_remote_control/config/: servo_config.yaml
ros_ws/src/armpi_remote_control/include/armpi_remote_control/: remote_gui_node.h  servo_command_receiver.h  servo_interface.h  servo_state_publisher.h
ros_ws/src/armpi_remote_control/launch/: gui.launch  gui_graphics.launch  gui_tkinter.launch  remote_control.launch
ros_ws/src/armpi_remote_control/msg/: ServoControl.msg  ServoStateFull.msg
ros_ws/src/armpi_remote_control/scripts/: read_servo_state.py  servo_gui_tkinter.py
ros_ws/src/armpi_remote_control/src/: remote_gui_node.cpp  servo_command_receiver.cpp  servo_gui.cpp  servo_state_publisher.cpp
ros_ws/src/stick_control/: multi_control_client.py  stick_control.py
software/armpi_pro_control/: action_group_controller.py  arm.sh  bus_servo_control.py  control_demo.py  main.py  servo_controller.py  ui.py  ui.ui
software/armpi_pro_control/ActionGroups/: temp.d6a
software/lab_config/: main.py  main.sh
software/servo_tool/: bus_servo_control.py  main.py  ros_robot_controller_sdk.py  servo_controller.py  servo_tool.sh  ui.ui
src/: audio_receive.cpp
src/python/: audio_receive.py  edge_tts_cantonese.py  edge_tts_mandarin.py  edge_tts_tool.py  ppttxs3.py  qwen_API.py  voice_assistant.py  voice_assistant_01.py  voice_command_mcp.py  whisper_asr.py
web-simulator/: README.md  config.json  install.bat  package-lock.json  package.json  run.bat  server.js  vercel.json
web-simulator/.github/workflows/: deploy.yml
web-simulator/api/: config.js  joints.js  urdf.js
web-simulator/api/meshes/: [filename].js
web-simulator/assets/urdf/: armpi_fpv.urdf
web-simulator/public/: index.html
web-simulator/public/js/: main.js
(+32 files in other folders)
